@@ -23,8 +23,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Makefile.PL should always push load_modules.pl for 'make test' 
 
-- siggv not initialized under DSO?  (Preston Brown)
-
 - look at using soft_timeout instead of hard_timeout
 
 - t/modules/cookie must test have_module "CGI::Cookie"
